--- a/style.css
+++ b/style.css
@@ -15183,3 +15183,12 @@ body .modal-backdrop {
     transform: scale(1.2);
   }
 }
+
+.rs-team.style1 .team-item-over .content-part {
+	transform: translate(-50%, -50%) !important;
+	opacity: 1 !important;
+}
+.rs-team.style1 .team-item-over::after{
+  transform: translate(-50%, -50%) scale(1) !important;
+  opacity: 0.9 !important;
+}
